--- a/src/views/pages/Category/category.scss
+++ b/src/views/pages/Category/category.scss
@@ -4,3 +4,10 @@
     justify-content: space-between;
     align-items: center;
 }
+
+.img{
+    width: 100px;
+    img{
+        width: 100%;
+    }
+}
