--- a/src/views/pages/article/article.scss
+++ b/src/views/pages/article/article.scss
@@ -5,6 +5,14 @@
     align-items: center;
 }
 
-.addButton{
-    width: 100px;
+.btnContainer{
+    text-align: right;
+    margin: 0 20px 10px 0;
+    
+    button {
+        font-size: 17px;
+    }
+    .icon{
+        font-size: 20px;
+    }
 }
