trying to solve add new category but there was a 500 status code error, where is the issue didnot find

--- a/src/views/pages/Category/category.scss
+++ b/src/views/pages/Category/category.scss
@@ -11,3 +11,16 @@
         width: 100%;
     }
 }
+
+.btnContainer{
+    text-align: right;
+    margin: 0 20px 10px 0;
+    
+    button {
+        font-size: 17px;
+    }
+    .icon{
+        font-size: 20px;
+    }
+}
+
