--- a/src/views/pages/faqs/faq.scss
+++ b/src/views/pages/faqs/faq.scss
@@ -4,3 +4,15 @@
     justify-content: space-between;
     align-items: center;
 }
+
+.btnContainer{
+    text-align: right;
+    margin: 0 20px 10px 0;
+    
+    button {
+        font-size: 17px;
+    }
+    .icon{
+        font-size: 20px;
+    }
+}
